--- a/index.html
+++ b/index.html
@@ -454,8 +454,36 @@
                <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
                   <figure class="cc-effect"><img src="images/course-5.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Essential Javascript </div>
+                      <div class="h4">Essentials Javascript </div>
                       <p>Javascript</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
+                  <figure class="cc-effect"><img src="images/course-7.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Elearn Relational <br> Database Design </div>
+                      <p>Database</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
+                  <figure class="cc-effect"><img src="images/course-8.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Essentials SQL </div>
+                      <p>SQL</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
+                  <figure class="cc-effect"><img src="images/course-9.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">SCRUM Roles </div>
+                      <p>SCRUM</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><!--<a href="#web-development">-->
+                  <figure class="cc-effect"><img src="images/course-10.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Github for Programmers </div>
+                      <p>Github</p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
@@ -479,6 +507,34 @@
                     <figcaption>
                       <div class="h4">Advanced JavaScript: Best Practices</div>
                       <p>Javascript</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/course-11.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Become a Full-stack Developer</div>
+                      <p>Full-Stack Development</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/course-12.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Introduction to IoT</div>
+                      <p>Internet of Things</p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/course-13.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Fundamentals of Time Management</div>
+                      <p> - </p>
+                    </figcaption>
+                  </figure><!--</a>--></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+                  <figure class="cc-effect"><img src="images/course-14.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">Simplified Project Management</div>
+                      <p> - </p>
                     </figcaption>
                   </figure><!--</a>--></div>
             </div>
