--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#courses">Courses</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -418,7 +419,7 @@
     </div>-->
   </div>
 </div>
-<div class="section" id="portfolio">
+<div class="section" id="courses">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
