--- a/index.html
+++ b/index.html
@@ -81,10 +81,6 @@
               <div class="col-sm-4"><strong class="text-uppercase">Edad:</strong></div>
               <div class="col-sm-8">27</div>
             </div>-->
-           <!-- <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">@gmail.com</div>
-            </div>-->
             <!--<div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
               <div class="col-sm-8">+1718-111-0011</div>
@@ -96,6 +92,10 @@
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Languages:</strong></div>
               <div class="col-sm-8" id="no-bullet-list"><ul> <li>Spanish (Native)</li> <li>English (Fluent)</li><li>German (Basic)</li></ul></div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+              <div class="col-sm-8">m.danielabap@gmail.com</div>
             </div>
           </div>
         </div>
