--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About me</div>
-            <p>¡Hi! I'm María Daniela, I'm a Systems Engineer graduated from Universidad de Los Andes, Venezuela.</p>
+            <p>Hello! I'm María Daniela, I'm a Systems Engineer graduated from Universidad de Los Andes, Venezuela.</p>
             <p>I consider myself an organized, responsible and proactive person. I like to participate in new projects and I 'm always willing to learn new things. I'm able to adapt to any circumstance and always give my best in any project. </p>
           </div>
         </div>
