--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Languages:</strong></div>
-              <div class="col-sm-8" id="no-bullet-list"><ul> <li>Spanish (Native)</li> <li>English (Fluent)</li><li>German (Basic)</li></ul></div>
+              <div class="col-sm-8" id="no-bullet-list"><ul> <li>Spanish (Native)</li> <li>English (Fluent)</li><li>German (Intermediate)</li></ul></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
@@ -123,7 +123,8 @@
           <li>Maple</li>
           <li>Simulink</li>
           <li>Proteus</li>
-          <li>Vensim</li>
+          <li>R</li>
+          <li>C/C++</li>
           <li>Arduino</li>
         </ul><!--
         <div class="row">
