certification section, add google certification

--- a/index.html
+++ b/index.html
@@ -311,6 +311,41 @@
     </div>
   </div>
 </div>
+<div class="section" id="certification">
+  <div class="container cc-experience">
+    <div class="h4 text-center mb-4 title">Certifications</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>2021</p>
+            <div class="h5">Google Data Analytics Specialization</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">E-commerce Development</div>
+            <p>I developed an E‐Commerce using Woocommerce for a food wholesale company. This company is called Catabra and It’s located in Bogotá, Colombia.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>February 2017 - December 2019</p>
+            <div class="h5">ULA</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">University Teaching Assistant</div>
+            <p> At the end of my studies I worked as a university teaching assistant in some subjects related to the area of Control and Automation. I was a trainer in subjects such as: Modeling of Physical Systems, Systems Identification, Instrumentation. </p>
+          </div>
+        </div>
+      </div>
+    </div>
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Experience</div>
@@ -318,14 +353,14 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>2021</p>
-            <div class="h5">Catabra</div>
+            <p>07/2023-01/2024</p>
+            <div class="h5">Google</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">E-commerce Development</div>
-            <p>I developed an E‐Commerce using Woocommerce for a food wholesale company. This company is called Catabra and It’s located in Bogotá, Colombia.</p>
+            <div class="h5">Google Data Analytics Specialization</div>
+            <p>Earned Google Data Analytics Professional certification through completion of eight courses developed by Google, with hands-on assessments. Demonstrated proficiency in the use of a range of tools such as spreadsheets, SQL, Tableau and R. Equipped with the ability to effectively handle data preparation, processing, analysis and reporting, facilitating informed and strategic decision-making processes.</p>
           </div>
         </div>
       </div>
