--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About me</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#certification">Certifications</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#courses">Courses</a></li>
