social media buttons modified

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/baptista-daniela" target="_blank" rel="tooltip" title="Conecta conmigo en Linkedin"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/dani.baptista/" target="_blank" rel="tooltip" title="Sígueme en Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/baptista-daniela" target="_blank" rel="tooltip" title="Check my Linkedin"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/danielabaptista" target="_blank" rel="tooltip" title="Check my GitHub"><i class="fa fa-github"></i></a></div>
         </div>
       </div>
     </div>
