--- a/index.html
+++ b/index.html
@@ -326,8 +326,13 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Google Data Analytics Specialization</div>
-            <p>Earned Google Data Analytics Professional certification through completion of eight courses developed by Google, with hands-on assessments. Demonstrated proficiency in the use of a range of tools such as spreadsheets, SQL, Tableau and R. Equipped with the ability to effectively handle data preparation, processing, analysis and reporting, facilitating informed and strategic decision-making processes.</p>
-          </div>
+            <p>Earned Google Data Analytics Professional certification through completion of eight courses developed by Google, with hands-on assessments. Demonstrated proficiency in the use of a range of tools such as spreadsheets, SQL, Tableau and R. Equipped with the ability to effectively handle data preparation, processing,
+              analysis and reporting, facilitating informed and strategic decision-making processes.
+            </p>
+            <p>Check this certificate at:
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BDM5VPWV5CEA">Coursera Specialization Certificate</a>
+            </p>
+            </div>
         </div>
       </div>
     </div>
