--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               analysis and reporting, facilitating informed and strategic decision-making processes.
             </p>
             <p>Check this certificate at:
-              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BDM5VPWV5CEA">Coursera Specialization Certificate</a>
+              <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BDM5VPWV5CEA" target="_blank">Coursera Specialization Certificate</a>
             </p>
             </div>
         </div>
