--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About me</div>
-            <p>Hello! I'm María Daniela, I'm a Systems Engineer graduated from Universidad de Los Andes, Venezuela.</p>
-            <p>I consider myself an organized, responsible and proactive person. I like to participate in new projects and I 'm always willing to learn new things. I'm able to adapt to any circumstance and always give my best in any project. </p>
+            <p>Hello! I am a systems engineer and have extensive programming experience, as well as a deep knowledge of control systems. I have
+            demonstrated my programming and software engineering skills through various projects, including game development and
+            e-commerce using WordPress and WooCommerce..</p>
+            <p>Recently, I earned a Google certification in data analytics, furthering my
+            skills. I excel in problem solving skills, teamwork and adaptability, have a passion for continuous learning and a strong sense
+            of self-motivation. Eager to evolve professionally, I enthusiastically accept new challenges and development opportunities. </p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
