--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
     </div>
     <footer class="footer">
       <!--<div class="container text-center"><a class="cc-linkedin btn btn-link" href="#"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>-->
-      <div class="container text-center"><a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/baptista-daniela" target="_blank"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/danielabaptista" target="_blank" rel="tooltip" title="Check my GitHub"><i class="fa fa-github"></i></a></div>
+      <div class="container text-center"><a class="cc-linkedin btn btn-link" href="https://www.linkedin.com/in/baptista-daniela" target="_blank"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a><a class="cc-github btn btn-link" href="https://github.com/danielabaptista" target="_blank" rel="tooltip" title="Check my GitHub"><i class="fa fa-github"></i></a></div>
       <div class="h4 title text-center">María Daniela Baptista Theuerkauf</div>
       <div class="text-center text-muted">
         <p>&copy; Creative CV. All rights reserved.<!--<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a>--></p>
