--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
           <li>R</li>
           <li>C/C++</li>
           <li>Arduino</li>
+          <li>Microsoft Excel</li>
+          <li>Tableau</li>
+          <li></li>
         </ul><!--
         <div class="row">
           <div class="col-md-6">
