--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
          <!-- <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>-->
           <div class="h2 title">María Daniela Baptista Theuerkauf</div>
           <p class="category text-white">Systems Engineer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact me</a><a class="btn btn-primary" href="/images/DanielaBaptista_CV.pdf" download="cv-DanielaBaptista" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download my CV</a>
+          <p>Interests: </p>
         </div>
       </div>
       <div class="section">
