--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          <!-- <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>-->
           <div class="h2 title">María Daniela Baptista Theuerkauf</div>
           <p class="category text-white">Systems Engineer</p>
-          <p class="category text-white">Interests: Software Development, Data Analyst</p>
+          <p class="category text-white">Interests: Software Development, Data Analyst, Autonomous Systems, IoT</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact me</a><a class="btn btn-primary" href="/images/DanielaBaptista_CV.pdf" download="cv-DanielaBaptista" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download my CV</a>
         </div>
       </div>
