--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>-->
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Tübingen, Germany</div>
+              <div class="col-sm-8">Zwickau, Germany</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Languages:</strong></div>
