--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About me</div>
-            <p>Hello! I am a systems engineer and have extensive programming experience, as well as a deep knowledge of control systems. I have
-            demonstrated my programming and software engineering skills through various projects, including game development and
-            e-commerce using WordPress and WooCommerce..</p>
-            <p>Recently, I earned a Google certification in data analytics, furthering my
-            skills. I excel in problem solving skills, teamwork and adaptability, have a passion for continuous learning and a strong sense
-            of self-motivation. Eager to evolve professionally, I enthusiastically accept new challenges and development opportunities. </p>
+            <p>Hello! I am a systems engineer with extensive programming experience and a strong understanding of control systems. 
+              After completing my first semester of a master's in Computer Science at the University of Tübingen, where I worked on NLP projects like sentiment analysis 
+              and text summarization, I switched to a master’s program in IoT and Smart Systems at the University of Zwickau, which better aligns with my interests. 
+              Currently, I am learning about Human-Computer Interaction (HCI), IoT project design, and project management.</p>
+            <p>In addition to these academic pursuits, after finishing my Bachelor's degree, I developed e-commerce solutions using WordPress and earned a
+              Google certification in data analytics. I excel in problem-solving, teamwork, and continuous learning, and I am always eager to take on new challenges.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
